<resources>
    <string name="app_name">eMaisha</string>
    <string name="action_settings">Settings</string>
    <string name="label_fields">Fields</string>
    <string name="label_crops">Crops</string>
    <string name="date_not_entered_message">The date has not been entered</string>
    <string name="seed_name_not_entered_message">You must enter a seed Name</string>
    <string name="quantity_not_entered_message">You must enter a quantity</string>
    <string name="batch_number_entered_message">You must enter a batch number</string>
    <string name="missing_fields_message">Missing Fields:</string>
    <string name="usage_units_not_selected">Usage Units not selected</string>
    <string-array name="crop_fertilizer_calculator_units">
        <item>Select Unit</item>
        <item>Acres</item>
        <item>Hectares</item>
    </string-array>
    <string-array name="crop_seeds_usage_units">
        <item>Unit</item>
        <item>g</item>
        <item>Kg</item>
        <item>cwt</item>
        <item>tonne</item>
    </string-array>
    <string-array name="cropInventories">
        <item>Select Inventory</item>
        <item>All Records</item>
        <item>Fertilizers</item>
        <item>Seed</item>
        <item>Spray</item>
    </string-array>
    <string-array name="crop_fertilizers_usage_units">
        <item>Select unit</item>
        <item>g</item>
        <item>Kg</item>
        <item>cwt</item>
        <item>tonne</item>
        <item>lt</item>
        <item>ml</item>
        <item>m3</item>
    </string-array>
    <string-array name="crop_spray_usage_units">
        <item>Units</item>
        <item>ml</item>
        <item>cwt</item>
        <item>flo3</item>
        <item>lt</item>
        <item>m3</item>
    </string-array>
    <string-array name="crop_fertilizers_types">
        <item>Fertilizer Type</item>
        <item>Solid Manufactured</item>
        <item>Liquid Manufactured</item>
        <item>Solid Manure</item>
        <item>Poultry Manure</item>
        <item>Cattle Slurry</item>
        <item>Pig Slurry</item>
        <item>Other Organic</item>
    </string-array>
    <string name="fertilizer_name_not_entered">Fertilizer name has not been entered</string>
    <string name="fertilizer_type_not_selected">Fertilizer type not selected</string>
    <string name="default_numeric_value">0</string>
    <string-array name="crop_field_units">
        <item>Select Unit</item>
        <item>Acres</item>
        <item>Hectares</item>
        <item>Square Miles</item>
    </string-array>
    <string-array name="crop_roi_yield_units">
        <item>Units</item>
        <item>Boxes</item>
        <item>Kg</item>
        <item>Tonnes</item>
        <item>Bushels</item>
        <item>Bags</item>
        <item>Bunches</item>
    </string-array>
    <string-array name="crop_havest_units">
        <item>Select</item>
        <item>Boxes</item>
        <item>Kg</item>
        <item>Tonnes</item>
        <item>Bushels</item>
        <item>Bags</item>
        <item>Bunches</item>
    </string-array>
    <string-array name="invoice_terms_list">
        <item>Select Unit</item>
        <item>Due on Receipt</item>
        <item>Net 7</item>
        <item>Net 15</item>
        <item>Net 30</item>
        <item>Net 60</item>
        <item>None</item>
    </string-array>
    <string-array name="crop_field_type">
        <item>Field Type</item>
        <item>Soil Ground/Field</item>
        <item>Greenhouse</item>
        <item>Hydroponics</item>
    </string-array>
    <string-array name="crop_field_status">
        <item> Status</item>
        <item>Active</item>
        <item>Fallow</item>
        <item>Leased</item>
        <item>Other</item>
    </string-array>
    <string-array name="seed_inventory_seed_type">
        <item>Seed Type</item>
        <item>Conventional</item>
        <item>GMO</item>
        <item>Heirloom</item>
        <item>Hybrid</item>
        <item>Organic</item>
    </string-array>
    <string-array name="crop_cultivate_operation">
        <item>Select Operation</item>
        <item>Field Preparation</item>
        <item>Lime</item>
        <item>Pest Management</item>
        <item>Weed Control</item>
        <item>Other</item>
    </string-array>
    <string-array name="crop_notes_category">
        <item>Select Category</item>
        <item>Maintenance</item>
        <item>Repair</item>
        <item>Other</item>
    </string-array>
    <string-array name="crop_spray_type">
        <item>Spray Type</item>
        <item>Pesticide</item>
        <item>Herbicide</item>
        <item>Insecticide</item>
        <item>Fungicide</item>
        <item>Nematocide</item>
    </string-array>
    <string-array name="crop_spray_name">
        <item>Spray Name</item>
    </string-array>
    <string-array name="crop_potassium_fertilizer">
        <item>Potassic Fertilizer</item>
    </string-array>
    <string-array name="crop_nitrogen_fertilizer">
        <item>Nitrogen Fertilizer</item>
    </string-array>
    <string-array name="crop_npk_fertilizer">
        <item>NPK Fertilizer</item>
    </string-array>
    <string-array name="crop_fertilizer_application_method_solid">
        <item>Broadcasting</item>
        <item>Placement</item>
        <item>Band Placement</item>
        <item>Pellet Application</item>
    </string-array>
    <string-array name="crop_fertilizer_application_method_liquid">
        <item>Starter Solutions</item>
        <item>Foliar Application</item>
        <item>Fertigation</item>
        <item>Injection into Soil</item>
        <item>Aerial Application</item>
    </string-array>
    <string-array name="crop_fertilizer_form">
        <item>Select Form</item>
        <item>Solid</item>
        <item>Liquid</item>
    </string-array>
    <string-array name="crop_list">
        <item>Crop</item>
    </string-array>
    <string-array name="crop_spraying_weather_condition">
        <item>Select</item>
        <item>Sunny</item>
        <item>Sunny Spells</item>
        <item>Fine</item>
        <item>Showers</item>
        <item>Rain</item>
        <item>Heavy Rain</item>
    </string-array>
    <string-array name="crop_spraying_wind_direction">
        <item>Select</item>
        <item>N</item>
        <item>N.E</item>
        <item>N.W</item>
        <item>S</item>
        <item>S.E</item>
        <item>S.W</item>
        <item>E</item>
        <item>W</item>
    </string-array>
    <string-array name="crops_list">
        <item>Select Crop</item>
        <item>Beans</item>
        <item>Tomatoes</item>
        <item>Maize</item>
        <item>Cassava</item>
        <item>Irish Potatoes</item>
        <item>Sweet Potatoes</item>
    </string-array>
    <string-array name="sp_crop_employee_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="sp_crop_employee_employment_status">
        <item>Select Status</item>
        <item>Full-Time</item>
        <item>Intern</item>
        <item>Part-Time</item>
        <item>Terminated</item>
    </string-array>
    <string-array name="sp_crop_employee_per">
        <item>Select</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="sp_crop_employee_pay_type">
        <item>Select</item>
        <item>Salary</item>
        <item>Hourly</item>
        <item>Contract</item>
        <item>Salary non-exempt</item>
    </string-array>
    <string name="cultivation_date">Cultivation Date</string>
    <string name="operation">Operation</string>
    <string name="operator">Operator</string>
    <string name="fixed_cost">Fixed Cost</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="contact_type">Contact Type</string>
    <string name="business_name">Business Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">Website</string>
    <string name="news_all"> All News </string>
    <string name="product_title"> Product Title </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="address"> Address </string>
    <string name="sendemail">SEND EMAIL</string>
    <string name="forgot_title">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="no_record">No Record</string>
    <string name="found">Found</string>
    <string name="ugx">UGX</string>
</resources>