<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground" >

    <TextView
        android:id="@+id/news_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_all"
        android:textSize="18sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/news_header"
        android:layout_above="@+id/loading_bar" />

    <LinearLayout
        android:id="@+id/no_record_placeholder"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:background="@drawable/ic_newspaper"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no_record"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/josefin_sans"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/found"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/josefin_sans"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />


</RelativeLayout>