<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="4dp"
    tools:context=".activities.CropCultivationManagerActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cultivation_date"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/txt_crop_cultivate_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="Enter.."
                android:textSize="14sp"
                android:inputType="none"
                android:background="@drawable/input_shapes"


                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_crop_cultivate_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:entries="@array/crop_cultivate_operation"
                android:background="@drawable/input_shapes"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/txt_crop_cultivate_operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter.."
                android:textSize="14sp"
                android:background="@drawable/input_shapes"


                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed_cost"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/gray_mh"
                android:layout_marginBottom="10dp">

           <TextView
               android:id="@+id/crop_cost"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/ugx"
               android:layout_weight="0.1"
               android:textSize="14sp"
               android:textAlignment="center"
               android:textStyle="bold"
               android:gravity="center_vertical"

               />

            <EditText
                android:id="@+id/txt_crop_cultivate_fixed_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter.."
                android:layout_weight="0.5"
                android:inputType="number"
                android:textSize="14sp"
                android:background="@drawable/input_shapes"

                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />




            <EditText
                android:id="@+id/txt_crop_cultivate_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:background="@drawable/input_shapes"
                android:hint="Enter.."
                android:textSize="14sp"


                />



        </LinearLayout>
        <Button
            android:id="@+id/btn_save"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTint="#ffffff"
            android:text="Save "
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>
</LinearLayout>