<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CropContactManagerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_type"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sp_crop_contact_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="0.5"
                    android:background="@drawable/input_shapes"
                    android:entries="@array/sp_crop_contact_type"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    />

                <EditText
                    android:id="@+id/txt_crop_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter.."
                    android:background="@drawable/input_shapes"
                    android:textSize="14sp"


                    />

            </LinearLayout>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/business_name"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="16sp"

                        />

                    <EditText
                        android:id="@+id/txt_crop_contact_business_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Enter.."
                        android:textSize="14sp"
                        android:background="@drawable/input_shapes"


                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    >
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txt_crop_contact_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Enter.."
                        android:textSize="14sp"
                        android:background="@drawable/input_shapes"


                        />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_crop_contact_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter.."
                    android:textSize="14sp"
                    android:background="@drawable/input_shapes"
                    android:inputType="number"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_crop_contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter.."
                    android:textSize="14sp"
                    android:background="@drawable/input_shapes"
                    android:inputType="textEmailAddress"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_crop_contact_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter.."
                    android:textSize="14sp"
                    android:background="@drawable/input_shapes"
                    android:inputType="textWebEmailAddress"

                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableTint="#ffffff"
                android:text="Save "
                android:textAllCaps="false"
                android:textColor="#ffffff" />






        </LinearLayout>
    </ScrollView>

</LinearLayout>