<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/colorAccentGreen">

        <ImageView
            android:id="@+id/dismissButton"
            android:padding="12dp"
            android:src="@drawable/ic_cancel_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="6dp"
            android:textStyle="bold"
            android:layout_marginLeft="6dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/forgot_password_text"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_title"
            android:textColor="@color/textColorSecondaryLight"
            android:textSize="16sp"
            android:textStyle="normal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_title_padding_10"
            android:background="@drawable/rounded_corners_edittext_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_email"></ImageView>

                <EditText
                    android:id="@+id/dialog_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:layout_toRightOf="@id/iv_profile"
                    android:background="@drawable/rounded_corners_edittext_white"
                    android:drawablePadding="15dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark" />

            </RelativeLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_below="@id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_corners_button">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_button"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical"
                android:text="@string/sendemail"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                />
            <ImageView
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dip"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_right_arrow">

            </ImageView>

        </FrameLayout>


    </LinearLayout>


</LinearLayout>